# TurtleManager

./: .gitignore  Dockerfile  GUI_interface.py  GUI_setting.py  LICENSE  TurtleManager.py  __main__.py  pyproject.toml  readme.md  requirement.txt  requirements.txt
scripts/: build.sh  install.sh  run_turtlemanager.sh
turtle_ws/src/process_mocap/: package.xml  setup.cfg  setup.py
turtle_ws/src/process_mocap/process_mocap/: mapper_node.py
turtle_ws/src/ros2-mocap_optitrack/launch/: launch_z_up.py
turtle_ws/src/ros2-mocap_optitrack/mocap_optitrack_client/config/: natnetclient.yaml
turtle_ws/src/ros2-mocap_optitrack/mocap_optitrack_client/include/MoCapNatNetClient/: MoCapNatNetClient.h
turtle_ws/src/ros2-mocap_optitrack/mocap_optitrack_client/include/MoCapPublisher/: MoCapPublisher.h
turtle_ws/src/ros2-mocap_optitrack/mocap_optitrack_client/src/: MoCapNatNetClient.cpp  MoCapPublisher.cpp
turtle_ws/src/ros2-mocap_optitrack/mocap_optitrack_interfaces/msg/: RigidBody.msg
turtle_ws/src/tb_multi_robot_control/: package.xml  setup.cfg  setup.py
turtle_ws/src/tb_multi_robot_control/scripts/: nominal_control.py  process_mocap.py
turtle_ws/src/tb_multi_robot_control/tb_multi_robot_control/: test.py
