[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turtlemanager"
version = "1.0.0"
description = "GUI to manage multi-TurtleBot experiments with OptiTrack"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "PyQt6>=6.4",
  "psutil>=5.9",
  "numpy>=1.22",
  "rowan>=1.3"
]

[project.scripts]
turtlemanager = "turtlemanager.__main__:main"

[tool.setuptools]
packages = ["turtlemanager"]
